Update Dr. Semmelweis and the Discovery of Handwashing.ipynb

--- a/Dr. Semmelweis and the Discovery of Handwashing.ipynb
+++ b/Dr. Semmelweis and the Discovery of Handwashing.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## 1. About Dr. Ignaz Semmelweis\n",
     "\n",
-    "<img style=\"float: left;margin:5px 20px 5px 1px\" src=\"ignaz_semmelweis_1860.jpeg\"></p>\n",
+    "<img style=\"float: left;margin:5px 20px 5px 1px\" src=\"ignaz_semmelweis_1860.jpeg\">\n",
     "\n",
     "Dr. Ignaz Semmelweis, a Hungarian physician born in 1818 and active at the Vienna General Hospital. Dr. Semmelweis was thinking about *childbed fever*: A deadly disease affecting women that just have given birth. He was thinking about it because in the early 1840s at the Vienna General Hospital as many as 10% of the women giving birth died from it. He knew the cause of childbed fever: It's the contaminated hands of the doctors delivering the babies. And they won't listen to him and *washed their hands*!\n",
     "\n",
